--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <body>
 
       <!--JavaScript at end of body for optimized loading-->
-      
+      <script src="https://www.google.com/recaptcha/api.js" async defer></script>
       <app-root></app-root>
     </body>
   </html>
